update, desde vs code

--- a/semana-1/index.html
+++ b/semana-1/index.html
@@ -10,11 +10,13 @@
         <h1> Acerca de mi</h1>
     </header>
     <main>
-        <h2> mis primeros agnos</h2>
         <article>
             naci en Lima, Perù
-            <!-- comentario-->
+            <!-- un comentario-->
         </article>
+        <footer>
+            <p>informacion</p>
+        </footer>
     </main>
 
 
