--- a/semana-1/index.html
+++ b/semana-1/index.html
@@ -10,6 +10,7 @@
         <h1> Acerca de mi</h1>
     </header>
     <main>
+        <h2> Pais de origen </h2>
         <article>
             naci en Lima, Perù
             <!-- un comentario-->
