nuevo profilo index.html e css

--- a/index.html
+++ b/index.html
@@ -1,43 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jesus Hugo Retamozo Leon - Automazione e Robotica  </title>
-</head>
-<body>
-    <header>
-        <h1> Acerca de mi</h1>
-    </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jesus Hugo Retamozo Leon- Frontend Developer - VML</title>
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+  <body>
+    <nav>
+      <div>
+        <img src="./images/logo-1.svg" width="35" height="40" alt="">
+      </div>
+      <div>
+        <ul
+          class="nav-list">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Sobre mi</a>
+          </li>
+          <li>
+            <a href="#">Proyectos</a>
+          </li>
+          <li>
+            <a href="#">Hábilidades</a>
+          </li>
+          <li>
+            <a href="#">Carrera</a>
+          </li>
+          <li>
+            <a href="#">Recomendaciones</a>
+          </li>
+          <li>
+            <a href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <main>
-        <h2> Pais de origen </h2>
-        <article>
-            naci en Lima, Perù
-            <!-- un comentario-->
-        </article>
-        <footer>
-            <p>informacion</p>
-        </footer>
+      <div>
+        <p>👋 Saludos!</p>
+        <h1>Jesus Hugo Retamozo Leon</h1>
+        <p>Frontend - Developer</p>
+        <div class="socil-links">
+          <a href="">Linkedin</a>
+          <a href="">Github</a>
+          <a href="">Instagram</a>
+        </div>
+      </div>
+      <div>
+        <img 
+        src="./images/jesus.jpg"
+         alt="Jesus Retamozo - Foto de perfil" />
+      </div>
+      <div>
+        <p>
+          <a href="#">Descargar CV</a>
+        </p>
+        <p>
+          <a href="">Vamos a conversar</a>
+        </p>
+      </div>
     </main>
-
-
-
-
-
-</body>
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
