--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesus Hugo Retamozo Leon- Frontend Developer - VML</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+       <link
+         href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
+         rel="stylesheet"
+       />
+
+
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -69,6 +78,41 @@
         </div>
 
       </main>
+      <hr class="divider" />
+      <section>
+        <div class="container-cards">
+          <div>
+            <img src="./images/code-icon.svg" alt="" />
+            <p>7 años como</p>
+            <h5>Programador</h5>
+          </div>
+          <div>
+            <img src="./images/projects-icon.svg" alt="" />
+            <p>7 años resolviendo</p>
+            <h5>Proyectos</h5>
+          </div>
+          <div>
+            <img src="./images/design-icon.svg" alt="" />
+            <p>4 años como</p>
+            <h5>Designer</h5>
+          </div>
+        </div>
+        <div class="container-summary">
+          <div>
+            <p>Developer</p>
+            <p>Front-end</p>
+          </div>
+          <div>
+            <p>Decenas de proyectos y</p>
+            <p>Experiencias</p>
+          </div>
+          <div>
+            <p>Diseñador freelance e</p>
+            <p>UI / UX</p>
+          </div>
+        </div>
+      </section>
+      <hr class="divider" />
       <section class="container-about-me">
         <div>
           <img 
