update semana1 (struttura html)- semana2

--- a/semana-1/reto-1-2.html
+++ b/semana-1/reto-1-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codice-18-Developer </title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style1.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
 
 
     <div>
-        <img src="" 
+        <img src="./images/jesus.jpg" 
         alt=" immagine di Jesus Hugo Retamozo Leon">
 <h1> Jesus Hugo Retamozo Leon</h1>
 <h2> Peru, Lima </h2>
