--- a/semana-1/index-profilo.html
+++ b/semana-1/index-profilo.html
@@ -13,7 +13,7 @@
        />
 
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css"/>
   </head>
   <body>
     <nav class="flex align-center" >
