--- a/semana-2/tip-calculator-profe.html
+++ b/semana-2/tip-calculator-profe.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style2.css" />
   </head>
   <body>
     <main>
