update, orden de archivos

--- a/semana-2/html+css/index-css.html
+++ b/semana-2/html+css/index-css.html
@@ -16,7 +16,7 @@
 
     <!-- otra manera de crear css es en su archivo de css-->
     <!-- lo hacemos dentro el head con link -->
-    <link rel="stylesheet" href="./css/index-css.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
 </head>
