--- a/semana-1/Reto-1_Profilo_1/index.html
+++ b/semana-1/Reto-1_Profilo_1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codice-18-Developer </title>
 
-    <link rel="stylesheet" href="./css/style1.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
