--- a/semana-3/challenges/sunnyside/index.html
+++ b/semana-3/challenges/sunnyside/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/util.css" />
-    <link rel="stylesheet" href="./css/style3.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/xl.css" />
   </head>
   <body>
