--- a/semana-1/Reto-1_Profilo_1/index.html
+++ b/semana-1/Reto-1_Profilo_1/index.html
@@ -11,8 +11,7 @@
 <body>
 
 <main>
-
-
+    
     <div>
         <img src="./images/jesus.jpg" 
         alt=" immagine di Jesus Hugo Retamozo Leon">
@@ -20,7 +19,7 @@
 <h2> Peru, Lima </h2>
 <p>"Front-end developer"</p>
 <ul>
-    <li><a href="https://github.com/">GitHub</a></li>
+    <li><a href="https://Github.com/">GitHub</a></li>
     <li><a href="https://tecsup.instructure.com/login/canvas">Canvas</a></li>
     <li><a href="">Discord</a></li>
     <li><a href="">Visual Studio Code</a></li>
