--- a/semana-1/Reto-1_Profilo_2/reto2-repaso.html
+++ b/semana-1/Reto-1_Profilo_2/reto2-repaso.html
@@ -13,13 +13,11 @@
 
     <!-- <link rel="stylesheet" href="./css/style-repaso1-repeat-codigo.css"/> -->
 
-    <!-- <link rel="stylesheet" href="./css/style-repaso1-con-menos-codigo.css"> -->
+    <link rel="stylesheet" href="./css/style-repaso1-con-menos-codigo.css">
 
     <!-- aca vamos aumentar class en las etiquetas que tienen codigo repetidos en el css -->
     <!-- vamos a borrar codigo repetitivos en css y lo vamos aumenta en html con class -->
 
-
-    <link rel="stylesheet" href="./css/style-modificando.css">
 
 
 
@@ -90,22 +88,23 @@
           </a>
         </div>
       </main>
+      <!-- aca le metemos una linea  -->
       <hr class="divider" />
       <section>
         <div class="container-cards">
           <div>
             <img src="./images/code-icon.svg" alt="" />
-            <p>7 años como</p>
+            <p>2 semas como</p>
             <h5>Programador</h5>
           </div>
           <div>
             <img src="./images/projects-icon.svg" alt="" />
-            <p>7 años resolviendo</p>
+            <p>2 semanas resolviendo</p>
             <h5>Proyectos</h5>
           </div>
           <div>
             <img src="./images/design-icon.svg" alt="" />
-            <p>4 años como</p>
+            <p>2 semanas como</p>
             <h5>Designer</h5>
           </div>
         </div>
@@ -133,10 +132,11 @@
             </div>
         </div>
         <div>
+          <!-- aca hacer parrafos o filas ul son iguale es indiferente -->
           <span class="gretting">🧐 Sobre mi!</span>
           <h2 class="mt-20">Jesus Hugo</h2>
           <h2 class="mb-20">Retamozo Leon</h2>
-          <p class="mb-20">
+          <p class="mt-20">
               👋 hola me llamo Jesus Retamozo</p>
           <p class="mt-20" >
             👨🏻‍💻 estoy en mi segunda semana de frontend.
