--- a/semana-4/challenges/e-commerce_tailwind/index.html
+++ b/semana-4/challenges/e-commerce_tailwind/index.html
@@ -56,15 +56,17 @@
       </nav>
       <hr class="hidden md:block mx-20" />
     </header>
-    <section class="mt-5">
-      <div>
-        <div class="h-[400px] relative">
+    <section
+      class="mt-5 md:mt-20 md:flex md:justify-between gap-20 max-w-screen-xl m-auto"
+    >
+      <div class="">
+        <div class="h-[400px] md:h-[500px] relative">
           <img
             src="./images/image-product-1.jpg"
-            class="w-full h-full object-cover"
+            class="w-full h-full object-cover md:rounded-2xl"
             alt=""
           />
-          <div class="absolute top-0 w-full h-full">
+          <div class="absolute top-0 w-full h-full md:hidden">
             <div class="flex justify-between h-full items-center mx-7">
               <img
                 src="./images/icon-previous.svg"
@@ -79,16 +81,58 @@
             </div>
           </div>
         </div>
+        <div class="mt-5 gap-5 hidden md:flex">
+          <div
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+          >
+            <img
+              class="w-full object-cover rounded-xl hover:opacity-45"
+              src="./images/image-product-1.jpg"
+              alt=""
+            />
+          </div>
+          <div
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+          >
+            <img
+              class="w-full object-cover rounded-xl hover:opacity-45"
+              src="./images/image-product-2.jpg"
+              alt=""
+            />
+          </div>
+          <div
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+          >
+            <img
+              class="w-full object-cover rounded-xl hover:opacity-45"
+              src="./images/image-product-3.jpg"
+              alt=""
+            />
+          </div>
+          <div
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+          >
+            <img
+              class="w-full object-cover rounded-xl hover:opacity-45"
+              src="./images/image-product-4.jpg"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
       <div class="m-6">
-        <p class="text-xs font-bold text-[#ff7d1a]">SNEAKER COMPANY</p>
-        <h1 class="mt-5 font-bold text-4xl">Fall Limited Edition Sneakers</h1>
+        <p class="text-xs font-bold text-[#ff7d1a] tracking-widest">
+          SNEAKER COMPANY
+        </p>
+        <h1 class="mt-5 font-bold text-4xl md:text-6xl">
+          Fall Limited Edition Sneakers
+        </h1>
         <p class="mt-5 text-gray-500">
           These low-profile sneakers are your perfect casual wear companion.
           Featuring a durable rubber outer sole, they'll withstand everything
           the weather can offer.
         </p>
-        <div class="flex justify-between mt-5">
+        <div class="flex md:flex-col justify-between mt-5">
           <div class="flex gap-5 items-center">
             <h2 class="text-2xl font-bold">$ 125.00</h2>
             <span
@@ -97,25 +141,29 @@
             >
           </div>
           <div>
-            <p class="text-gray-300 line-through">$ 250.00</p>
+            <p class="text-gray-300 line-through font-bold">$ 250.00</p>
           </div>
         </div>
-        <div class="mt-5 flex justify-between bg-gray-100 py-3 px-5 rounded-lg">
-          <button>
-            <img src="./images/icon-minus.svg" alt="" />
-          </button>
-          <p class="font-bold">0</p>
-          <button>
-            <img src="./images/icon-plus.svg" alt="" />
-          </button>
-        </div>
-        <div class="mt-5">
-          <button
-            class="bg-[#ff7d1a] shadow-[0_20px_60px_-15px_#ff7d1a] rounded-lg text-white w-full flex justify-center items-center gap-3 px-3 py-4"
+        <div class="md:flex gap-5">
+          <div
+            class="mt-5 flex grow justify-between bg-gray-100 py-3 px-5 rounded-lg"
           >
-            <img src="./images/icon-cart-white.svg" class="w-5" alt="" />
-            <span class="font-bold text-sm">Add to cart</span>
-          </button>
+            <button>
+              <img src="./images/icon-minus.svg" alt="" />
+            </button>
+            <p class="font-bold">0</p>
+            <button>
+              <img src="./images/icon-plus.svg" alt="" />
+            </button>
+          </div>
+          <div class="mt-5 grow-[2]">
+            <button
+              class="bg-[#ff7d1a] shadow-[0_20px_60px_-15px_#ff7d1a] rounded-lg text-white w-full flex justify-center items-center gap-3 px-3 py-4"
+            >
+              <img src="./images/icon-cart-white.svg" class="w-5" alt="" />
+              <span class="font-bold text-sm">Add to cart</span>
+            </button>
+          </div>
         </div>
       </div>
     </section>
