update, profilo-card completo

--- a/semana3/challenges/sunnyside/index.html
+++ b/semana3/challenges/sunnyside/index.html
@@ -20,6 +20,7 @@
 
     <!--modo repaso  -->
     <!-- <link rel="stylesheet" href="./css/style-mobile-repaso-largo.css" /> -->
+    <link rel="stylesheet" href="./css/media-query.css">
     <link rel="stylesheet" href="./css/style-mobile-repaso-corto.css">
     <link rel="stylesheet" href="./css/xl-desktop-repaso.css">
 
