--- a/semana3/challenges/multi-step-form/index.html
+++ b/semana3/challenges/multi-step-form/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/xl.css" />
+
+    <!-- link de repaso -->\
+    <link rel="stylesheet" href="./css/mobile-repaso.css">
+    <link rel="stylesheet" href="./css/desktop-repaso.css">
+
+
+
   </head>
   <body>
     <main>
