--- a/lavori/challenges/result-summary-component-main/index.html
+++ b/lavori/challenges/result-summary-component-main/index.html
@@ -59,7 +59,7 @@
               </div>
               <div class="summary-row">
                 <div class="summary-row__title">
-                   🔍 visual </div>
+               </div>
                 <div class="summary-row__stats"> 
                     80 <span>/100</span>
                 <!-- lo vamos a colocar dentro uno span para darle un color diferente  -->
