--- a/semana4/challenges/spotify/index2.html
+++ b/semana4/challenges/spotify/index2.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="mt-5">
-          <ul class="flex flex-col gap-1">
+          <ul class="flex flex-col gap-5">
             <li
               class="py-3 text-[#adadad] hover:text-white hover:bg-gradient-to-r hover:from-[#2d2d2d] hover:border-r hover:border-r-[#1db954] hover:border-r-[6px]"
             >
@@ -74,7 +74,7 @@
           <p class="ps-12 uppercase font-semibold text-xs tracking-widest">
             Library
           </p>
-          <ul class="flex flex-col gap-1 mt-5">
+          <ul class="flex flex-col gap-5 mt-5">
             <li
               class="py-3 text-[#adadad] hover:text-white hover:bg-gradient-to-r hover:from-[#2d2d2d] hover:border-r hover:border-r-[#1db954] hover:border-r-[6px]"
             >
@@ -108,7 +108,7 @@
             <span>PLAYLIST</span>
             <img src="./assets/icons/add.svg" alt="" />
           </p>
-          <ul class="flex flex-col gap-1 mt-5">
+          <ul class="flex flex-col gap-5 mt-5">
             <li
               class="py-3 text-[#adadad] hover:text-white hover:bg-gradient-to-r hover:from-[#2d2d2d] hover:border-r hover:border-r-[#1db954] hover:border-r-[6px]"
             >
@@ -136,245 +136,12 @@
           </ul>
         </div>
       </aside>
-      <section class="principal bg-[#121212] p-10">
-        <div class="px-4">
-          <div class="flex justify-between">
-            <div class="flex gap-5 items-center">
-              <button class="bg-[#212121] py-5 px-6 rounded-md">
-                <img src="./assets/icons/arrow-left.svg" alt="" />
-              </button>
-              <a href="">
-                <span class="font-thin text-[#ADADAD]">Home</span>
-              </a>
-              <span>
-                <img src="./assets/icons/arrow-right.svg" alt="" />
-              </span>
-              <a href="">Popular Artist</a>
-            </div>
-            <div class="flex gap-5 items-center">
-              <div
-                class="flex gap-3 bg-[#212121] rounded-[13px] px-4 w-[318px] h-[50px] py-3"
-              >
-                <img src="./assets/icons/search-white.svg" alt="" />
-                <input
-                  type="text"
-                  placeholder="Search music, artist, albums..."
-                  class="bg-transparent outline-none w-full"
-                />
-              </div>
-              <div>
-                <button>
-                  <img src="./assets/icons/notification.svg" alt="" />
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="relative p-4 mt-10">
-          <div
-            class="bg-[url('./assets/images/bg-principal.png')] bg-no-repeat bg-center bg-cover h-[296px] overflow-hidden rounded-2xl"
-          >
-            <div
-              class="relative h-full inset-0 bg-black/85 flex justify-between items-center"
-            >
-              <div class="py-6 ps-16">
-                <p class="flex gap-3 items-center text-[#BABCBE]">
-                  <img src="./assets/icons/verified.svg" alt="" />
-                  <span>Verified Artist</span>
-                </p>
-                <h1 class="text-[50px] font-bold my-2">Ed Sheeran</h1>
-                <p class="flex items-center gap-3">
-                  <img src="./assets/icons/icon_headphones_.svg" alt="" />
-                  <span class="font-semibold">82,736,050</span>
-                  <span class="text-[#ADADAD]">monthly listeners</span>
-                </p>
-                <div class="mt-5 flex gap-5">
-                  <button
-                    class="bg-[#1DB954] py-3 px-5 rounded-full font-semibold"
-                  >
-                    PLAY
-                  </button>
-                  <button
-                    class="bg-transparent border border-2 flex items-center gap-2 py-3 px-5 rounded-full font-semibold"
-                  >
-                    <img src="./assets/icons/check.svg" alt="" />
-                    <span>FOLLOWING</span>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="w-full">
-            <img
-              width="433"
-              height="363"
-              class="absolute -top-[51px] right-[50px] right-0"
-              src="./assets/images/ed-sheeran.png"
-              alt=""
-            />
-          </div>
-        </div>
-      </section>
-      <section class="extra bg-[#212121] p-6 overflow-auto">
-        <div class="flex gap-5">
-          <img
-            src="./assets/images/profile.png"
-            width="51"
-            class="rounded-full"
-            alt=""
-          />
-          <div>
-            <h4 class="font-bold text-base">Linder Hassinger</h4>
-            <div class="flex gap-2 items-center mt-2">
-              <p class="text-xs font-thin">Premium</p>
-              <img src="./assets/icons/point.svg" alt="" />
-              <img src="./assets/icons/star.svg" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="flex justify-between mt-10">
-          <p class="font-semibold">Fans Also Like</p>
-          <a class="text-[#1DB954]" href="">See All</a>
-        </div>
-        <div class="mt-10">
-          <div class="relative">
-            <img src="./assets/images/james.png" class="rounded-xl" alt="" />
-            <div
-              class="absolute bottom-0 backdrop-blur-xl rounded-b-xl bg-black/40 w-full px-4 py-3"
-            >
-              <p class="text-sm font-semibold">James Arthur</p>
-              <p class="text-xs font-thin mt-1">Artist</p>
-            </div>
-          </div>
-          <div class="flex gap-3 justify-center mt-5">
-            <span
-              class="h-[8px] w-[8px] cursor-pointer rounded-full bg-white"
-            ></span>
-            <span
-              class="h-[8px] w-[8px] cursor-pointer rounded-full bg-[#7A7A7A]"
-            ></span>
-            <span
-              class="h-[8px] w-[8px] cursor-pointer rounded-full bg-[#7A7A7A]"
-            ></span>
-            <span
-              class="h-[8px] w-[8px] cursor-pointer rounded-full bg-[#7A7A7A]"
-            ></span>
-          </div>
-          <div class="flex justify-between mt-10">
-            <p class="font-semibold">Recent Played</p>
-            <a class="text-[#1DB954]" href="">See All</a>
-          </div>
-          <div class="mt-3 flex flex-col gap-5">
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/music.svg" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Perfect</p>
-                <p class="text-xs text-[#ADADAD] font-thin">Ed Sheeran</p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">2min ago</p>
-            </div>
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/roman.png" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Roman Picisan</p>
-                <p class="text-xs text-[#ADADAD] font-thin">
-                  Hanin Dhiy, Ah...
-                </p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">8min ago</p>
-            </div>
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/title.png" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Title (Deluxe)</p>
-                <p class="text-xs text-[#ADADAD] font-thin">Meghan trainor</p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">1hr ago</p>
-            </div>
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/shiver.png" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Shiver</p>
-                <p class="text-xs text-[#ADADAD] font-thin">Ed Sheeran</p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">4hr ago</p>
-            </div>
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/feel.png" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Feel Something</p>
-                <p class="text-xs text-[#ADADAD] font-thin">Jaymes Young</p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">5hr ago</p>
-            </div>
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/music.svg" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Shape of You</p>
-                <p class="text-xs text-[#ADADAD] font-thin">Ed Sheeran</p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">12hr ago</p>
-            </div>
-            <div class="flex items-center gap-3">
-              <img width="44" src="./assets/images/shiver.png" alt="" />
-              <div class="flex-[1.3]">
-                <p class="text-sm">Bad Habits</p>
-                <p class="text-xs text-[#ADADAD] font-thin">Ed Sheeran</p>
-              </div>
-              <p class="text-xs flex-1 w-[60px]">14hr ago</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="player backdrop-blur-md bg-white/30">
-        <div class="w-full bg-[#4C4C4C] rounded-full h-[0.5vh]">
-          <div class="bg-white h-[0.5vh] rounded-full" style="width: 35%"></div>
-        </div>
-        <div
-          class="h-[9.5vh] bg-[url('./assets/images/bg-play.png')] flex justify-between p-5"
-        >
-          <div class="flex items-center gap-5">
-            <img src="./assets/images/music.svg" alt="" class="object-cover" />
-            <div>
-              <h3 class="text-md">Shape of you</h3>
-              <p class="text-sm font-thin text-[#ADADAD]">Ed Sheeran</p>
-            </div>
-            <button>
-              <img width="20" src="./assets/icons/heart-player.svg" alt="" />
-            </button>
-          </div>
-          <div class="flex gap-5 items-center">
-            <button>
-              <img src="./assets/icons/shuffle.svg" alt="" />
-            </button>
-            <div class="flex gap-3">
-              <button>
-                <img src="./assets/icons/back.svg" alt="" />
-              </button>
-              <button class="bg-[#D9D9D9] p-2 rounded-full">
-                <img src="./assets/icons/pause.svg" width="24" alt="" />
-              </button>
-              <button>
-                <img src="./assets/icons/back.svg" class="rotate-180" alt="" />
-              </button>
-            </div>
-            <img src="./assets/icons/repeatemusic.svg" alt="" />
-          </div>
-          <div class="flex gap-5 items-center">
-            <p class="text-[#BEBEBE]">1:45 / 4:42</p>
-            <div class="flex items-center gap-3">
-              <img src="./assets/icons/volumehigh.svg" alt="" />
-              <div class="w-[99px] bg-[#4C4C4C] rounded-full h-[4px]">
-                <div
-                  class="bg-white h-[4px] rounded-full"
-                  style="width: 85%"
-                ></div>
-              </div>
-            </div>
-            <button>
-              <img src="./assets/icons/comment.svg" alt="" />
-            </button>
-          </div>
+      <section class="principal bg-[#121212]">content principal</section>
+      <section class="extra bg-[#212121]">extra</section>
+      <section class="player bg-[#15cf]/70 relative">
+        <div class="imagen h-full absolute inset-0 filter blur"></div>
+        <div class="h-full absolute inset-0">
+          <img src="./assets/icons/music1.svg" alt="" class="object-cover" />
         </div>
       </section>
     </main>
