update, dashboard repaso

--- a/lavori/challenges/dashboard/index.html
+++ b/lavori/challenges/dashboard/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard con css Grid</title>
 
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+
+    <!-- <link rel="stylesheet" href="./css/style-repaso.css"> -->
 
 
 </head>
