update, tailwind - repaso e-commerce

--- a/semana4/challenges/e-commerce_tailwind/index.html
+++ b/semana4/challenges/e-commerce_tailwind/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
+    <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com/3.4.1"></script>
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
+      rel="stylesheet"/>
+      <!-- css -->
+      <link rel="stylesheet" href="./style.css">
+      
+      
   </head>
   <style>
     body {
@@ -83,7 +87,8 @@
         </div>
         <div class="mt-5 gap-5 hidden md:flex">
           <div
-            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a]
+             transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
               class="w-full object-cover rounded-xl hover:opacity-45"
@@ -92,7 +97,8 @@
             />
           </div>
           <div
-            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] 
+            transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
               class="w-full object-cover rounded-xl hover:opacity-45"
@@ -101,7 +107,8 @@
             />
           </div>
           <div
-            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] 
+            transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
               class="w-full object-cover rounded-xl hover:opacity-45"
@@ -110,7 +117,8 @@
             />
           </div>
           <div
-            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] transtion-all duration-300 cursor-pointer hover:border-[3px]"
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a]
+             transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
               class="w-full object-cover rounded-xl hover:opacity-45"
