--- a/semana4/challenges/e-commerce_tailwind/index-repaso.html
+++ b/semana4/challenges/e-commerce_tailwind/index-repaso.html
@@ -4,30 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
+
+    <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com/3.4.1"></script>
+    <!--font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+    <!-- css -->
+      <link rel="stylesheet" href="./style.css">
   </head>
-  <style>
-    body {
-      font-family: "Kumbh Sans", sans-serif;
-    }
-  </style>
+  <!-- le aumentamos un style css para no cambiar de pagina -->
+  
   <body>
     <header>
-      <nav class="">
-        <div class="">
+      <nav class="flex justify-between items-center p-5 md:px-20 md:py-10">
+        <!--display:flex --justify-content:space-between--align-items:center--padding:20px -- 
+        md:px-20 margen de forma orizzontale 80px 
+        md:py-10 margen de forma vertical 40px  -->
+
+        <div class="flex items-center gap-5">
+          <!--display flex --align-items:center --gap:20px -->
+
           <button class="">
             <img src="./images/icon-menu.svg" alt="" />
           </button>
           <a href="">
             <img src="./images/logo.svg" alt="" />
           </a>
-          <ul class="">
+          <!-- hidden = display:none hace que ningun otro estilo se va aplicar 
+            lo usamos solo para desktop con md:  -->
+          <ul class="hidden md:flex gap-10 ms-10">
+            <!-- display:none -- md:display:flex -- gap:40px -- margin-block-start:40px -->
             <li>
               <a href="">Collections</a>
             </li>
@@ -45,123 +55,142 @@
             </li>
           </ul>
         </div>
-        <div class="">
+        <div class="flex items-center gap-5">
+          <!--display flex --align-items:center --gap:20px -->
           <button>
             <img src="./images/icon-cart.svg" alt="" />
           </button>
           <button>
             <img class="w-6" src="./images/image-avatar.png" alt="" />
+            <!-- width:24px--    -->
           </button>
         </div>
       </nav>
-      <hr class="" />
+      <hr class="hidden md:block mx:20" />
+      <!-- display:none para mobile-- linea de block -- margen modo orizzontal -->
     </header>
-    <section
-      class=""
-    >
+    <section class="mt-5 md:flex md:mt-20 md:justify-center max-w-screen-xl m-auto gap-20   ">
+      <!-- margin-top:20px-- apartir de md se vuelve desktop -- m-auto = margin:auto---->
       <div class="">
-        <div class="">
+        <div class="h-[400px] relative md:h-[500px]">
+          <!-- heigth de 400px -- relative al padre-->
           <img
             src="./images/image-product-1.jpg"
-            class=""
+            class="w-full h-full object-cover md:rounded-2xl"
             alt=""
           />
-          <div class="">
-            <div class="">
+          <!-- width al 100% -- heigth al 100% 
+            object-cover adatta la imagen en este caso de los h-[300px] -->
+          <div class="absolute top-0 w-full h-full md:hidden">
+            <!-- absolute al hijo se mueve dentro il raletive padre  -->
+            <div class="flex justify-between items-center h-full mx-7">
+              <!-- display:flex -- justify-content:space-between -- mx-7= espacio alos costados -->
               <img
                 src="./images/icon-previous.svg"
-                class=""
+                class="bg-white p-2 rounded-full w-7 h-7"
                 alt=""
               />
+              <!-- background:white -- padding:4px -- border-radius:50% -->
               <img
                 src="./images/icon-next.svg"
-                class=""
+                class="bg-white p-2 rounded-full w-7 h-7"
                 alt=""
               />
             </div>
           </div>
         </div>
-        <div class="">
+        <div class="flex mt-5 gap-5">
           <div
-            class=""
-          >
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] 
+            transtion-all duration-300 cursor-pointer hover:border-[3px] ">
             <img
-              class=""
+              class=" w-full object-cover rounded-xl hover:opacity-45"
               src="./images/image-product-1.jpg"
-              alt=""
-            />
+              alt=""/>
           </div>
           <div
-            class=""
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] 
+            transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
-              class=""
+              class="w-full object-cover rounded-xl hover:opacity-45"
               src="./images/image-product-2.jpg"
-              alt=""
-            />
+              alt=""/>
           </div>
           <div
-            class=""
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] 
+            transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
-              class=""
+              class="w-full object-cover rounded-xl hover:opacity-45"
               src="./images/image-product-3.jpg"
-              alt=""
-            />
+              alt=""/>
           </div>
           <div
-            class=""
+            class="rounded-2xl w-[120px] hover:border hover:border-[#ff7d1a] 
+            transtion-all duration-300 cursor-pointer hover:border-[3px]"
           >
             <img
-              class=""
+              class="w-full object-cover rounded-xl hover:opacity-45"
               src="./images/image-product-4.jpg"
-              alt=""
-            />
+              alt=""/>
           </div>
         </div>
       </div>
-      <div class="">
-        <p class="">
+      <div class="m-6">
+        <!-- margin:24px -->
+        <p class="text-xs font-bold text-[orange] tracking-widest ">
+          <!-- texto-sm  mediano (de 14px) texto-xs mas chico
+            -- font-bold:grassetto -- text color -- letter-spacing   -->
           SNEAKER COMPANY
         </p>
-        <h1 class="">
+        <h1 class="mt-5 font-bold text-4xl md:text-6xl">
+          <!-- margin-top:20px -- grassetto-- texto con la grandezza text-4xl=36px -->
           Fall Limited Edition Sneakers
         </h1>
-        <p class="">
+        <p class="mt-5 text-gray-500">
+          <!-- margin-top:20px -- texto colore grigio -->
           These low-profile sneakers are your perfect casual wear companion.
           Featuring a durable rubber outer sole, they'll withstand everything
           the weather can offer.
         </p>
-        <div class="">
-          <div class="">
-            <h2 class="">$ 125.00</h2>
+        <div class="flex justify-between mt-5 md:flex-col">
+          <!-- Flex-col = flex-direction: column -->
+          <div class="flex gap-5 items-center">
+            <h2 class="text-2xl font-bold">$ 125.00</h2>
             <span
-              class=""
+              class="bg-[orange]/30 text-[orange] px-2 rounded font-semibold"
               >50%</span
             >
+            <!-- colore orange al 30 -- px-2 se mueve en x de 2-- 
+            rounded=rotondo i 4 lati un po-- font-semibold medio grasetto -->
           </div>
           <div>
-            <p class="">$ 250.00</p>
+            <p class="text-gray-300 line-through font-bold ">$ 250.00</p>
+            <!-- texto color gray y 300 es la intensidad del color --  line-through=tachado en medio -->
           </div>
         </div>
-        <div class="">
-          <div
-            class=""
-          >
+        <div class="md:flex gap-5">
+          <div class="mt-5 flex justify-between bg-gray-100 py-3 px-5 rounded-lg grow ">
+            <!-- grow = 1  -->
             <button>
               <img src="./images/icon-minus.svg" alt="" />
             </button>
-            <p class="">0</p>
+            <p class="font-bold">0</p>
             <button>
               <img src="./images/icon-plus.svg" alt="" />
             </button>
           </div>
-          <div class="">
+          <div class="mt-5 grow-[2]">
+            <!-- grow-[2]= 2 asi ocupa el doble del otro (que seria de la imagen minus.svg)
+            si lo dejava  solo con grow ocupava solo la mitad de la fila sera 1 a 1 va
+             tomar el ancho max del padre -->
             <button
-              class=""
-            >
-              <img src="./images/icon-cart-white.svg" class="" alt="" />
-              <span class="">Add to cart</span>
+              class="bg-[orange] shadow-[0_20px_60px_-15px_#ff7d1a] rounded-lg text-white
+               w-full flex justify-center items-cente gap-3 px-3 py-4">
+               <!-- shadow-[0_20px_60px_-15px_#ff7d1a] sombra  -->
+              <img src="./images/icon-car-white.svg" class="w-5" alt="" />
+              <span class="font-bold text-sm">Add to cart</span>
             </button>
           </div>
         </div>
