update,lavori make-remote-work con tailwind

--- a/semana4/challenges/e-commerce-tailwind/index-repaso.html
+++ b/semana4/challenges/e-commerce-tailwind/index-repaso.html
@@ -16,7 +16,6 @@
     <!-- css -->
       <link rel="stylesheet" href="./style.css">
   </head>
-  <!-- le aumentamos un style css para no cambiar de pagina -->
   
   <body>
     <header>
@@ -71,7 +70,7 @@
     </header>
     <section class="mt-5 md:flex md:mt-20 md:justify-center max-w-screen-xl m-auto gap-20   ">
       <!-- margin-top:20px-- apartir de md se vuelve desktop -- m-auto = margin:auto---->
-      <div class="">
+      <div>
         <div class="h-[400px] relative md:h-[500px]">
           <!-- heigth de 400px -- relative al padre-->
           <img
