update, lavori - javascript esercizio

--- a/lavori/challenges/javascript/index.html
+++ b/lavori/challenges/javascript/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hola mundo
-    <script src="./03-control-flujo/05-do-while.js"></script>
+    <script src="./04-ejercicios/02.js"></script>
 </body>
 </html>
