--- a/semana6/index.html
+++ b/semana6/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script defer src="./problem6.js"></script>
+    <title>JAVASCRIPT</title>
+    <script defer src="./problemas.js"></script>
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
