update semana 7 on-click in html

--- a/lavori/challenges/make-remote-work-tailwind/index3.html
+++ b/lavori/challenges/make-remote-work-tailwind/index3.html
@@ -48,20 +48,20 @@
     </header>
     <main class="md:flex items-center justify-center gap-[150px] md:flex-row-reverse ">
         <section >
-            <div class=" mt-5">
-                <!-- mobile -->
+            <div class="mt-5 md:hidden">
                 <img src="./images/image-hero-desktop.png"
-                class="hidden  xl:flex w-[450px] "
+                class="flex w-[450px] "
                  alt=" imagen desktop hero">
-<!-- desktop -->
+            </div>
+
+            <div class="hidden">
                 <img src="./images/image-hero-mobile1.png" 
-                class="xl:hidden"
                 alt=" imagen mobile hero">
             </div>
 
         </section>
 
-        <section class=" flex md:flex-col md:justify-between w-[450px] h-[620px] flex-col  " >
+        <section class=" flex md:flex-col md:justify-between w-[450px] h-[620px] flex-col gap-10 a" >
                     <div class=" font-bold  md:text-7xl mt-[100px] text-5xl ">
                         <div class="flex md:flex-col justify-center gap-2">
                            <h1>Make</h1>
