--- a/semana7/tip-calculator/index.html
+++ b/semana7/tip-calculator/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com/3.4.1"></script>
+    <script defer src="./js/app.js"></script>
   </head>
   <body>
     <main>
@@ -23,25 +24,17 @@
         <div>
           <div>
             <label for="input-bill" class="text-title">Bill</label>
-            <div class="container-input">
+            <div id="contailer-bill" class="container-input">
               <img src="./images/icon-dollar.svg" alt="" />
               <input id="input-bill" type="text" placeholder="0" />
             </div>
           </div>
           <div>
             <p class="text-title">Select Tip %</p>
-            <div class="container-percentage grid grid-cols-2 gap-3">
-              <button>5%</button>
-              <button>10%</button>
-              <button>15%</button>
-              <button>25%</button>
-              <button>50%</button>
-              <input
-                type="text"
-                class="outline-none p-2 bg-[#F3F8FB] rounded-md"
-                placeholder="Custom"
-              />
-            </div>
+            <div
+              id="container-percentage"
+              class="container-percentage grid grid-cols-2 gap-3"
+            ></div>
           </div>
           <div>
             <label for="input-people" class="text-title"
