--- a/semana6/index.html
+++ b/semana6/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAVASCRIPT</title>
-    <script defer src="./problemas.js"></script>
+    <script defer src="./problems3.js"></script>
+    // defer es un atributo que permite que se ejecute hasta que el 
+    // documento hayga cargado 
+    // funciona para javascript
   </head>
   <body>
   </body>
