--- a/semana8/index.html
+++ b/semana8/index.html
@@ -20,16 +20,56 @@
         <button class="bg-green-400 px-4 rounded-r-md">Crear</button>
       </form>
       <span id="error" class="text-xs text-red-500 mt-1"></span>
-      <section id="container-tasks" class="mt-10">
-        <div class="flex justify-between px-4 py-3 bg-white rounded-md">
-          <p>Tarea 1</p>
-          <div class="flex gap-5">
-            <button>✅</button>
-            <button>✏️</button>
-            <button>🗑️</button>
+      <section id="container-tasks" class="mt-10"></section>
+    </main>
+    <div id="modal" class="relative z-50 w-full">
+      <div class="fixed inset-0 bg-black/30"></div>
+      <div
+        class="fixed inset-0 w-full p-6 flex justify-center items-center rounded-md"
+      >
+        <div class="bg-white p-5 mx-auto w-full max-w-md border rounded-md">
+          <div id="modal-title" class="mb-5">
+            <h2 class="text-2xl font-semibold">Editar tarea</h2>
+          </div>
+          <div id="modal-content">
+            <form action="" id="form-edit">
+              <input
+                id="input-edit-task"
+                type="text"
+                placeholder="Editar tarea"
+                class="w-full border py-2 px-4 rounded-md outline-none"
+              />
+              <!-- <div class="mt-5">
+                <div class="flex flex-col gap-5 mt-4">
+                  <div>
+                    <input id="input-edit-create" type="radio" name="status" />
+                    Creado
+                  </div>
+                  <div>
+                    <input id="input-edit-done" type="radio" name="status" />
+                    Terminado
+                  </div>
+                </div>
+              </div> -->
+              <div class="mt-5 flex justify-end gap-5">
+                <button
+                  onclick="closeModal()"
+                  type="button"
+                  class="py-2 px-4 border border-red-400 rounded-md"
+                >
+                  Cerrar
+                </button>
+                <button
+                  type="submit"
+                  class="bg-green-400 py-2 px-4 rounded-md text-white"
+                >
+                  Actualizar
+                </button>
+              </div>
+            </form>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </div>
   </body>
 </html>
