semana  8 refactor -  aggiornato

--- a/index.html
+++ b/index.html
@@ -1,39 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-<body>\\
-
-
-
-    profe despues de aver creado el archivo demonode no me deja hacer un commit y salva 
-    que devo hacer ? 
-
-    user@DESKTOP-L09BDNU MINGW64 ~/Documents/codigo-18-frontend (master)
-$ git status
-On branch master
-Your branch is up to date with 'origin/master'.
-
-Changes not staged for commit:
-  (use "git add <file>..." to update what will be committed)
-  (use "git restore <file>..." to discard changes in working directory)
-        modified:   index.html
-        modified:   lavori/challenges/javascript/esercizi/01object.js
-        modified:   lavori/challenges/javascript/esercizi/02array.js
-        modified:   semana6/objects.js
-        modified:   semana6/problems2.js
-
-Untracked files:
-  (use "git add <file>..." to include in what will be committed)
-        DEMONODE/
-        semana8/
-
-no changes added to commit (use "git add" and/or "git commit -a")
-
-user@DESKTOP-L09BDNU MINGW64 ~/Documents/codigo-18-frontend (master)
-
+<body>
+  
 </body>
 </html>
