--- a/portfolio-leon/index.html
+++ b/portfolio-leon/index.html
@@ -6,18 +6,23 @@
   <title>Document</title>
    <!-- tailwind -->
    <!-- <script src="./tailwind-codigo/tailwind-codigo.txt"></script> -->
+   <!-- font -->
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
+     rel="stylesheet"/>
 
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
   <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
-    <li><a href="">Services</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Our Team</a></li>
-    <li><a href="">Contact</a></li>
+    <li style = "--i:6"><a href="#">Home</a></li>
+    <li style = "--i:5"><a href="#">About</a></li>
+    <li style = "--i:4"><a href="#">Services</a></li>
+    <li style = "--i:3"><a href="#">Portfolio</a></li>
+    <li style = "--i:2"><a href="#">Our Team</a></li>
+    <li style = "--i:1"><a href="#">Contact</a></li>
   </ul>
   
 </body>
