--- a/lavori/challenges/make-remote-work-tailwind/index.html
+++ b/lavori/challenges/make-remote-work-tailwind/index.html
@@ -53,6 +53,7 @@
                 <img src="./images/image-hero-desktop.png"
                 class="hidden  xl:flex w-[450px] "
                  alt=" imagen desktop hero">
+                 <!-- importante meter hidden junto con xl:flex  -->
 <!-- desktop -->
                 <img src="./images/image-hero-mobile1.png" 
                 class="xl:hidden"
