--- a/portfolio/challenges/menu/barraMenu/index.html
+++ b/portfolio/challenges/menu/barraMenu/index.html
@@ -18,9 +18,9 @@
 <body>
   <nav>
     <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Product</a>
-    <a href="#">Services</a>
+    <a href="#">About Me</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Skills</a>
     <a href="#">Contact</a>
     <span></span>
   </nav>
