--- a/portfolio/leon3/index.html
+++ b/portfolio/leon3/index.html
@@ -93,7 +93,7 @@
             Sono un appassionato dell'automazione e mi piace essere aggiornato
             con le nuove tecnologie ed imparare
           </p>
-          <button class="profile-btn">scaricare cv</button>
+          <button class="profile-btn">scaricare pdf</button>
         </div>
         <div class="profile-img-section">
           <img
