portfolio Hugo leon

--- a/semana1/challenges/profilo2/index.html
+++ b/semana1/challenges/profilo2/index.html
@@ -91,17 +91,17 @@
         <div class="container-cards">
           <div>
             <img src="./images/code-icon.svg" alt="" />
-            <p>7 años como</p>
+            <p>3 meses como</p>
             <h5>Programador</h5>
           </div>
           <div>
             <img src="./images/projects-icon.svg" alt="" />
-            <p>7 años resolviendo</p>
+            <p>3 meses resolviendo</p>
             <h5>Proyectos</h5>
           </div>
           <div>
             <img src="./images/design-icon.svg" alt="" />
-            <p>4 años como</p>
+            <p>3 meses como</p>
             <h5>Designer</h5>
           </div>
         </div>
